public class Viento extends Instrumento{

    /**
     * Constructor de la clase Viento
     * @param nombre
     * @param material
     * @param codigo
     * @param precio
     * @param stock
     */
    public Viento(String nombre, String material, String codigo, int precio, int stock) {
        super(nombre, material, codigo, precio, stock);
    }


}
